<resources>
    <string name="app_name">MovieReview</string>
    <string name="details_review_btn">REVIEW MOVIE</string>
    <string name="details_plot">Plot</string>
    <string name="details_director">Director</string>
    <string name="details_actors">Actors</string>
    <string name="details_genre">Genre</string>
    <string name="rate_movie_button">REVIEW THIS MOVIE</string>
    <string name="details_name">Movie Details</string>
    <string name="rating_movie">Movie Rating</string>
    <string name="rating_movie_toast">Review saved!</string>
    <string name="test12334">TEST12354435</string>
    </resources>
